addons/k8s-gatekeeper/templates/medtech-health_data_cross_border_controls-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: medtech-health_data_cross_border_controls
  annotations:
    rulehub.id: medtech.health_data_cross_border_controls
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: MedtechHealth_data_cross_border_controlsConstraint
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            enabled:
              type: boolean
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package rulehub.medtech.health_data_cross_border_controls
      import future.keywords.if

      default deny = []

      # Example: deny with a message
      deny[msg] {
        input.review.kind.kind == "Deployment"
        msg := "medtech.health_data_cross_border_controls: example violation"
      }
